--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
 </head>
 <body>
     <div class="init-bg">
-        <h1 class="home-header">WELCOME</h1>
+        <img src="PROF_20230222.jpg" alt="Maverick Reynolds Headshot" class="prof-pic">
+        <h1 class="home-header">WELCOME!</h1>
         <p class="home-first-content">Hi I'm Maverick! I'm a third year student at University of Central Florida studying computational mathematics. This website is being developed to capture all of my interests and projects and make my work more accessible to anyone who wants to see.</p>
     </div>
     <div class="next">
