--- a/index.html
+++ b/index.html
@@ -1,15 +1,43 @@
 <!DOCTYPE html>
+<html lang="en-us">
+    <head>
 
-<head>
-    <link rel="stylesheet" href="index.css">
-</head>
-<body>
-    <div class="init-bg">
-        <img src="PROF_20230222.jpg" alt="Maverick Reynolds Headshot" class="prof-pic">
-        <h1 class="home-header">WELCOME!</h1>
-        <p class="home-first-content">Hi I'm Maverick! I'm a third year student at University of Central Florida studying computational mathematics. This website is being developed to capture all of my interests and projects and make my work more accessible to anyone who wants to see.</p>
-    </div>
-    <div class="next">
-        <img src="NoContent.png" alt="" class="no-content">
-    </div>
-</body>
+        <title>Maverick Reynolds</title>
+        <link rel="stylesheet" href="index.css">
+        <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
+
+    </head>
+    <body>
+
+        <header class="header">
+            <a href="#" class="logo">Maverick</a>
+            <nav class="navbar">
+                <a href="#" class="active">Home</a>
+                <a href="#">About</a>
+                <a href="#">Here</a>
+                <a href="#">Fun</a>
+                <a href="#">Stuff</a>
+            </nav>
+        </header>
+
+        <section class="landing">
+            <div class="landing-content">
+                <h1>Welcome!</h1>
+                <h2>I'm Maverick Reynolds</h2>
+                <h3>Computational Mathematics Student at University of Central Florida</h3>
+
+                <div class="socials">
+                    <a href="https://www.instagram.com/mavreyn"><i class="bx bxl-instagram"></i></a>
+                    <a href="https://www.linkedin.com/in/maverickreyn"><i class="bx bxl-linkedin"></i></a>
+                    <a href="https://github.com/mavreyn"><i class="bx bxl-github"></i></a>
+                </div>
+            </div>
+            <img src="PROF_20230222.jpg" alt="Maverick Reynolds Profile Picture">
+        </section>
+
+        <div class="next">
+            <img src="NoContent.png" alt="" class="no-content">
+        </div>
+
+    </body>
+</html>
