--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
         <title>Maverick Reynolds</title>
         <link rel="stylesheet" href="index.css">
         <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
+        <script src="https://unpkg.com/typed.js@2.0.15/dist/typed.umd.js"></script>
 
     </head>
     <body>
@@ -35,9 +36,27 @@
             <img src="PROF_20230222.jpg" alt="Maverick Reynolds Profile Picture">
         </section>
 
-        <div class="next">
-            <img src="NoContent.png" alt="" class="no-content">
-        </div>
+        <section class="about">
+            <div class="about-typing">
+                <span class="about-prefix">Lover of</span>
+                <span class="about-words"></span>
+                <script>
+                    var typing = new Typed(".about-words", {
+                        strings: ["Mathematics", "Astronomy", "Physics", "Comp Sci"],
+                        loop: true,
+                        typeSpeed: 70,
+                        backSpeed: 40,
+                        backDelay: 2500
+                    })
+                </script>
+            </div>
+            <div class="about-content">
+                <p>
+                    A mathematics student by day, and a developer by night, I am always eager to improve my skillset and learn something new. With a strong passion for my work and a fiery drive for greatness, I'm excited for what the future holds.
+                </p>
+            </div>
+
+        </section>
 
     </body>
 </html>
