--- a/index.html
+++ b/index.html
@@ -1,62 +1,66 @@
 <!DOCTYPE html>
 <html lang="en-us">
-    <head>
+<head>
+    
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-        <title>Maverick Reynolds</title>
-        <link rel="stylesheet" href="index.css">
-        <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
-        <script src="https://unpkg.com/typed.js@2.0.15/dist/typed.umd.js"></script>
+    <title>Maverick Reynolds</title>
+    <link rel="stylesheet" href="index.css">
+    <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
+    <script src="https://unpkg.com/typed.js@2.0.15/dist/typed.umd.js"></script>
 
-    </head>
-    <body>
+</head>
+<body>
 
-        <header class="header">
-            <a href="#" class="logo">Maverick</a>
-            <nav class="navbar">
-                <a href="#" class="active">Home</a>
-                <a href="#">About</a>
-                <a href="#">Here</a>
-                <a href="#">Fun</a>
-                <a href="#">Stuff</a>
-            </nav>
-        </header>
+    <header class="header">
+        <a href="#" class="logo">Maverick</a>
+        <nav class="navbar">
+            <a href="#" class="active">Home</a>
+            <a href="#">About</a>
+            <a href="#">Here</a>
+            <a href="#">Fun</a>
+            <a href="#">Stuff</a>
+        </nav>
+    </header>
 
-        <section class="landing">
-            <div class="landing-content">
-                <h1>Welcome!</h1>
-                <h2>I'm Maverick Reynolds</h2>
-                <h3>Computational Mathematics Student at University of Central Florida</h3>
+    <section class="landing">
+        <div class="landing-content">
+            <h1>Welcome!</h1>
+            <h2>I'm Maverick Reynolds</h2>
+            <h3>Computational Mathematics Student at University of Central Florida</h3>
 
-                <div class="socials">
-                    <a href="https://www.instagram.com/mavreyn"><i class="bx bxl-instagram"></i></a>
-                    <a href="https://www.linkedin.com/in/maverickreyn"><i class="bx bxl-linkedin"></i></a>
-                    <a href="https://github.com/mavreyn"><i class="bx bxl-github"></i></a>
-                </div>
+            <div class="socials">
+                <a href="https://www.instagram.com/mavreyn"><i class="bx bxl-instagram"></i></a>
+                <a href="https://www.linkedin.com/in/maverickreyn"><i class="bx bxl-linkedin"></i></a>
+                <a href="https://github.com/mavreyn"><i class="bx bxl-github"></i></a>
             </div>
-            <img src="PROF_20230222.jpg" alt="Maverick Reynolds Profile Picture">
-        </section>
+        </div>
+        <img src="PROF_20230222.jpg" alt="Maverick Reynolds Profile Picture">
+    </section>
 
-        <section class="about">
-            <div class="about-typing">
-                <span class="about-prefix">Lover of</span>
-                <span class="about-words"></span>
-                <script>
-                    var typing = new Typed(".about-words", {
-                        strings: ["Mathematics", "Astronomy", "Physics", "Comp Sci"],
-                        loop: true,
-                        typeSpeed: 70,
-                        backSpeed: 40,
-                        backDelay: 2500
-                    })
-                </script>
-            </div>
-            <div class="about-content">
-                <p>
-                    A mathematics student by day, and a developer by night, I am always eager to improve my skillset and learn something new. With a strong passion for my work and a fiery drive for greatness, I'm excited for what the future holds.
-                </p>
-            </div>
+    <section class="about">
+        <div class="about-typing">
+            <span class="about-prefix">Lover of</span>
+            <span class="about-words"></span>
+            <script>
+                var typing = new Typed(".about-words", {
+                    strings: ["Mathematics", "Astronomy", "Physics", "Comp Sci"],
+                    loop: true,
+                    typeSpeed: 70,
+                    backSpeed: 40,
+                    backDelay: 2500
+                })
+            </script>
+        </div>
+        <div class="about-content">
+            <p>
+                A mathematics student by day, and a developer by night, I am always eager to improve my skillset and learn something new. With a strong passion for my work and a fiery drive for greatness, I'm excited for what the future holds.
+            </p>
+        </div>
 
-        </section>
+    </section>
 
-    </body>
+</body>
 </html>
