--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 
     <title>Maverick Reynolds</title>
     <link rel="stylesheet" href="index.css">
+    <script defer src="main.js"></script>
     <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
     <script src="https://unpkg.com/typed.js@2.0.15/dist/typed.umd.js"></script>
 
@@ -18,10 +19,10 @@
         <a href="#" class="logo">Maverick</a>
         <nav class="navbar">
             <a href="#" class="active">Home</a>
-            <a href="#">About</a>
-            <a href="#">Here</a>
-            <a href="#">Fun</a>
-            <a href="#">Stuff</a>
+            <a href="#about">About</a>
+            <a href="#">Favorites</a>
+            <a href="#projects">Projects</a>
+            <a href="#">Contact</a>
         </nav>
     </header>
 
@@ -37,28 +38,33 @@
                 <a href="https://github.com/mavreyn"><i class="bx bxl-github"></i></a>
             </div>
         </div>
-        <img src="PROF_20230222.jpg" alt="Maverick Reynolds Profile Picture">
+        <img src="PROF_upd_429.jpg" alt="Maverick Reynolds Profile Picture">
     </section>
 
-    <section class="about">
+    <section class="about" id="about">
         <div class="about-typing">
             <span class="about-prefix">Lover of</span>
             <span class="about-words"></span>
-            <script>
-                var typing = new Typed(".about-words", {
-                    strings: ["Mathematics", "Astronomy", "Physics", "Comp Sci"],
-                    loop: true,
-                    typeSpeed: 70,
-                    backSpeed: 40,
-                    backDelay: 2500
-                })
-            </script>
         </div>
         <div class="about-content">
             <p>
                 A mathematics student by day, and a developer by night, I am always eager to improve my skillset and learn something new. With a strong passion for my work and a fiery drive for greatness, I'm excited for what the future holds.
             </p>
         </div>
+
+    </section>
+
+    <section class="projects-interests" id="projects">
+        <h1>Projects and Interests</h1>
+        <p>
+            My best work from each of my favorite passions is available here. Click on a card to go to a page about that (better stuff here bruh)
+        </p>
+        <div class="card astronomy-card">
+            <a href="/astronomy">ASTRONOMY</h3>
+        </div>
+    </section>
+
+    <section class="empty">
 
     </section>
 
