--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
             [[ My best work from each of my favorite passions is available here. Click on a card to go to a page about that (better stuff here bruh) ]]
         </p>
         <div class="card astronomy-card">
-            <a href="/astronomy">ASTRONOMY</h3>
+            <a href="astronomy">ASTRONOMY</h3>
         </div>
     </section>
 
