Astronomy Parallax / effects

--- a/astronomy/index.html
+++ b/astronomy/index.html
@@ -7,45 +7,52 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Astronomy</title>
     <link rel="stylesheet" href="astronomy.css">
+    <script defer src="main.js"></script>
+    <script src="https://code.jquery.com/jquery-1.10.1.min.js"></script>
 
 </head>
 <body>
+    <div class="quote-image"></div>
 
     <header class="starry-night">
-        <div class="foreground"></div>
         <h1 class="astronomy">ASTRONOMY</h1>
+        <div class="foreground"></div>
     </header>
     <main>
-        <h2>
-            The <span>big</span> and the <span>small</span><br>
-            put into perspective
-        </h2><br>
-        <p>
-            What may be the oldest and simplest science may as well be one of the most insightful and romantic. It encapsulates both the expanse of our universe as well as our humble yet special place in space.
-        </p><br>
-        <p>
-            I have always been interested in outer space since I was young. But it wasn't until taking an astronomy course that I began to spend more nights under the stars. I took advantage of the access I had of the night sky and began to learn my way around the stars.
-        </p><br>
+        <div>
+            <h2>
+                The <span class="big">big</span> and the <span class="small">small</span><br>
+                put into perspective
+            </h2><br>
+            <p>
+                What may be the oldest and simplest science may as well be one of the most insightful and romantic. It encapsulates both the expanse of our universe as well as our humble yet special place in space.
+            </p><br>
+            <p>
+                I have always been interested in outer space since I was young. But it wasn't until taking an astronomy course that I began to spend more nights under the stars. I took advantage of the access I had of the night sky and began to learn my way around the stars.
+            </p>
+        </div>
         <div class="block-quote">
             <h2>
                 All we need to do is look up!
             </h2>
         </div>
-        <p>
-            Today, I am treasurer of the UCF Astronomy Society, proud owner of a Meade ETX-70AT, and a moderately experienced amateur astrophotographer. The starry skies are a place I really enjoy being under, and I hope it brings as much pleasure to you as to me!
-        </p>
-        <div class="astro-cards">
-            <div class="ucf-astro">
-                <a href="https://linktr.ee/ucfastroclub"><img src="https://d1fdloi71mui9q.cloudfront.net/MXciOKiFTR2xn7BeMBDQ_IMG_2205.PNG" alt="UCF Astronomy Society Logo"></a>
-                <p>Check out the UCF Astronomy Society</p>
-            </div>
-            <div class="astro-gphotos">
-                <a href="https://photos.app.goo.gl/btRGKGaMqrcYFsCU9"><img src="PXL_20230203_030536566.NIGHT.jpg" alt="My Best Moon Picture"></a>
-                <p>Take a look at my astrophotography</p>
-            </div>
-            <div class="nsm-article">
-                <a href="http://www.nicholsonstudentmedia.com/news/knights-under-the-stars-offers-a-once-in-a-lifetime-celestial-experience/article_91c66eec-a120-11ed-a8c5-63afb50be825.html"><img src="Maverick_Meade_Telescope.jpg" alt="Me using a Meade Telescope"></a>
-                <p>Our work during Comet ZTF's nearest approach</p>
+        <div class="astro-links-and-cards">
+            <p>
+                Today, I am treasurer of the UCF Astronomy Society, proud owner of a Meade ETX-70AT, and a moderately experienced amateur astrophotographer. The starry skies are a place I really enjoy being under, and I hope it brings as much pleasure to you as to me!
+            </p>
+            <div class="astro-cards">
+                <div class="ucf-astro">
+                    <a href="https://linktr.ee/ucfastroclub"><img src="https://d1fdloi71mui9q.cloudfront.net/MXciOKiFTR2xn7BeMBDQ_IMG_2205.PNG" alt="UCF Astronomy Society Logo"></a>
+                    <p>Check out the UCF Astronomy Society</p>
+                </div>
+                <div class="astro-gphotos">
+                    <a href="https://photos.app.goo.gl/btRGKGaMqrcYFsCU9"><img src="PXL_20230203_030536566.NIGHT.jpg" alt="My Best Moon Picture"></a>
+                    <p>Take a look at my astrophotography</p>
+                </div>
+                <div class="nsm-article">
+                    <a href="http://www.nicholsonstudentmedia.com/news/knights-under-the-stars-offers-a-once-in-a-lifetime-celestial-experience/article_91c66eec-a120-11ed-a8c5-63afb50be825.html"><img src="Maverick_Meade_Telescope.jpg" alt="Me using a Meade Telescope"></a>
+                    <p>Our work during Comet ZTF's nearest approach</p>
+                </div>
             </div>
         </div>
     </main>
