--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
     <script defer src="main.js"></script>
     <script defer src="ico.js"></script>
 
+    <script src="https://unpkg.com/scrollreveal"></script>
 </head>
 <body>
 
@@ -37,12 +38,12 @@
             <h1>Welcome!</h1>
             <h2>I'm Maverick Reynolds</h2>
             <h3>Computational Mathematics Student at University of Central Florida</h3>
+        </div>
 
-            <div class="socials">
-                <a href="https://www.instagram.com/mavreyn"><i class="bx bxl-instagram"></i></a>
-                <a href="https://www.linkedin.com/in/maverickreyn"><i class="bx bxl-linkedin"></i></a>
-                <a href="https://github.com/mavreyn"><i class="bx bxl-github"></i></a>
-            </div>
+        <div class="socials">
+            <a href="https://www.instagram.com/mavreyn"><i class="bx bxl-instagram"></i></a>
+            <a href="https://www.linkedin.com/in/maverickreyn"><i class="bx bxl-linkedin"></i></a>
+            <a href="https://github.com/mavreyn"><i class="bx bxl-github"></i></a>
         </div>
         <img src="PROF_upd_429.jpg" alt="Maverick Reynolds Profile Picture">
     </section>
@@ -53,29 +54,24 @@
             <span class="about-words"></span>
         </div>
         <div class="about-content">
-            <div class="my-desc">
-                <p>
-                    A mathematics student by day, and a developer by night, I am always eager to improve my skillset and learn something new.
-                </p>
-                <!--
-                <p>
-                    PLACEHOLDER HERE [[ With a strong passion for my work and a fiery drive for greatness, I'm excited for what the future holds. ]]
-                </p>
-                <p>
-                    Aside from the world of STEM, I also enjoy skateboarding and cooking in my freetime. In addition to attending UCF, I am also working as a front service clerk at Publix (which is a great opportunity to learn about ingredients and preparation given that I enjoy working with food)
-                </p> -->
-            </div>
+            <p>
+                A mathematics student by day, and a developer by night, I am always learning something new. Naturally, I enjoy projects that combine the fields of mathematics and computer science to create advanced designs, algorithms, and tools. With a passion for my work and a desire for greatness, I'm excited for what the future holds.
+            </p><br>
+            <p>
+                Aside from the world of STEM, I also enjoy skateboarding and cooking in my freetime. In addition to attending UCF, I am also working as a front service clerk at Publix, a great opportunity to learn about food and cooking.
+            </p>
         </div>
         <div id="ico-container"></div>
+        <h6 class="hint">Drag Me!</p>
     </section>
 
     <section class="projects-interests" id="projects">
         <h1>Projects and Interests</h1>
         <p>
-            [[ My best work from each of my favorite passions is available here. Click on a card to go to a page about that (better stuff here bruh) ]]
+            Take a look at some of my best work and greatest acheivements
         </p>
         <div class="card astronomy-card">
-            <a href="astronomy">ASTRONOMY</h3>
+            <a href="astronomy">ASTRONOMY</a>
         </div>
     </section>
 
