--- a/astronomy/index.html
+++ b/astronomy/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Astronomy</title>
+    <title>Astronomy - Maverick Reynolds</title>
     <link rel="stylesheet" href="astronomy.css">
     <script defer src="main.js"></script>
     <script src="https://code.jquery.com/jquery-1.10.1.min.js"></script>
