--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-    <link rel="stylesheet" href="index.css">
+    <link rel="stylesheet" href="main.css">
     <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
     
     <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r128/three.min.js"></script>
@@ -41,9 +41,9 @@
         </div>
 
         <div class="socials">
-            <a href="https://www.instagram.com/mavreyn"><i class="bx bxl-instagram"></i></a>
-            <a href="https://www.linkedin.com/in/maverickreyn"><i class="bx bxl-linkedin"></i></a>
-            <a href="https://github.com/mavreyn"><i class="bx bxl-github"></i></a>
+            <a href="https://www.instagram.com/mavreyn" target="_blank"><i class="bx bxl-instagram"></i></a>
+            <a href="https://www.linkedin.com/in/maverickreyn" target="_blank"><i class="bx bxl-linkedin"></i></a>
+            <a href="https://github.com/mavreyn" target="_blank"><i class="bx bxl-github"></i></a>
         </div>
         <img src="PROF_upd_429.jpg" alt="Maverick Reynolds Profile Picture">
     </section>
@@ -70,8 +70,10 @@
         <p>
             Take a look at some of my best work and greatest acheivements
         </p>
-        <div class="card astronomy-card">
-            <a href="astronomy">ASTRONOMY</a>
+        <div class="card-container">
+            <a href="astronomy" class="astronomy">ASTRONOMY</a>
+            <a href="computer-science" class="computer-science">COMPUTER SCIENCE</a>
+            <a href="desmos" class="desmos">DESMOS</a>
         </div>
     </section>
 
