--- a/astronomy/index.html
+++ b/astronomy/index.html
@@ -32,7 +32,7 @@ It was quite bright where I lived (and still is in Orlando) so I focused my effo
 I came to UCF and joined the UCF Astronomy Society my first semester. Since then, I have become even more knowledgeable on proper telescope operation and care thanks to the many KUTS (Knights Under the Stars) event I helped orchestrate with the team. We have taken a trip to a dark sky location, visited Kennedy Space Center, attended a soft opening of the Seminole State Planetarium's new projector, and so much more.
         </p>
         <p>
-Today, I am treasurer of the UCF Astronomy Society, and a novice amateur astronomer/astrophotographer with a Meade ETX70-AT. It is my hope that you'll enjoy the night sky as much as I do!
+Today, I am treasurer of the UCF Astronomy Society, and a novice amateur astronomer and astrophotographer with a Meade ETX70-AT. It is my hope that you'll enjoy the night sky as much as I do!
         </p>
         <div class="astro-cards">
             <a href="https://linktr.ee/ucfastroclub">
