--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
 
     <header class="header">
         <a href="#" class="logo">Maverick</a>
+        <i id="menu-icon" class='bx bx-menu'></i>
         <nav class="navbar">
             <a href="#" class="active">Home</a>
             <a href="#about">About</a>
