Card Hover / clean

--- a/astronomy/index.html
+++ b/astronomy/index.html
@@ -34,7 +34,7 @@ I came to UCF and joined the UCF Astronomy Society my first semester. Since then
         <p>
 Today, I am treasurer of the UCF Astronomy Society, and a novice amateur astronomer and astrophotographer with a Meade ETX70-AT. It is my hope that you'll enjoy the night sky as much as I do!
         </p>
-        <div class="astro-cards">
+        <div class="card-container">
             <a href="https://linktr.ee/ucfastroclub">
                 <img src="https://d1fdloi71mui9q.cloudfront.net/MXciOKiFTR2xn7BeMBDQ_IMG_2205.PNG" alt="UCF Astronomy Society Logo">
                 <p>Check out the UCF Astronomy Society</p>
