--- a/index.html
+++ b/index.html
@@ -80,9 +80,18 @@
             Take a look at some of my best work and greatest acheivements
         </p>
         <div class="card-container">
-            <a href="astronomy" class="astronomy">ASTRONOMY</a>
-            <a href="computer-science" class="computer-science">COMPUTER SCIENCE</a>
-            <a href="desmos" class="desmos">DESMOS</a>
+            <a href="astronomy">
+                <img src="https://images.squarespace-cdn.com/content/v1/5504d100e4b08eb858c4e8fc/1529015914950-BHRMYUXKGXF9LXH6AAD6/Starry+Night.jpeg?format=1500w" alt="Starry scene with telescope">
+                <p>ASTRONOMY</p>
+            </a>
+            <a href="computer-science">
+                <img src="https://images.theconversation.com/files/440861/original/file-20220114-19-18wivp1.jpg?ixlib=rb-1.1.0&q=45&auto=format&w=1200&h=675.0&fit=crop" alt="Matrix falling letters">
+                <p>COMPUTER SCIENCE</p>
+            </a>
+            <a href="desmos">
+                <img src="https://help.desmos.com/hc/article_attachments/4413863846413/desmos_icon_square.png" alt="Desmos Logo">
+                <p>DESMOS</p>
+            </a>
         </div>
         <canvas id="background"></canvas>
     </section>
