--- a/index.html
+++ b/index.html
@@ -36,9 +36,7 @@
         <nav class="navbar">
             <a href="#" class="active">Home</a>
             <a href="#about">About</a>
-            <a href="#">Favorites</a>
             <a href="#projects">Projects</a>
-            <a href="#">Contact</a>
         </nav>
     </header>
 
@@ -64,11 +62,8 @@
         </div>
         <div class="about-content">
             <p>
-                A mathematics student by day, and a developer by night, I am always learning something new. Naturally, I enjoy projects that combine the fields of mathematics and computer science to create advanced designs, algorithms, and tools. With a passion for my work and a desire for greatness, I'm excited for what the future holds.
+                A mathematics student by day, and a developer by night, I am always learning something new. Naturally, I enjoy projects that combine the fields of mathematics and computer science to create designs, algorithms, and tools. With a passion for my work and a desire for greatness, I'm excited for what the future holds.
             </p><br>
-            <p>
-                Aside from the world of STEM, I also enjoy skateboarding and cooking in my freetime. In addition to attending UCF, I am also working as a front service clerk at Publix, a great opportunity to learn about food and cooking.
-            </p>
         </div>
         <div id="ico-container"></div>
         <h6 class="hint">Drag Me!</p>
