--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
         <nav class="navbar">
             <a href="#" class="active">Home</a>
             <a href="#about">About</a>
-            <a href="#projects">Projects</a>
+            <a href="#projects">Interests</a>
         </nav>
     </header>
 
@@ -76,23 +76,11 @@
     </section>
 
     <section class="projects-interests" id="projects">
-        <h1>Projects and Interests</h1>
-        <p>
-            Take a look at some of my best work and greatest acheivements
-        </p>
         <div class="card-container">
-            <a href="astronomy">
-                <img src="https://images.squarespace-cdn.com/content/v1/5504d100e4b08eb858c4e8fc/1529015914950-BHRMYUXKGXF9LXH6AAD6/Starry+Night.jpeg?format=1500w" alt="Starry scene with telescope">
-                <p>ASTRONOMY</p>
-            </a>
-            <a href="computer-science">
-                <img src="https://images.theconversation.com/files/440861/original/file-20220114-19-18wivp1.jpg?ixlib=rb-1.1.0&q=45&auto=format&w=1200&h=675.0&fit=crop" alt="Matrix falling letters">
-                <p>COMPUTER SCIENCE</p>
-            </a>
-            <a href="desmos">
-                <img src="https://help.desmos.com/hc/article_attachments/4413863846413/desmos_icon_square.png" alt="Desmos Logo">
-                <p>DESMOS</p>
-            </a>
+            <a id="astronomy" href="astronomy">Astronomy</a>
+            <a id="computer-science" href="computer-science">CompSci</a>
+            <a id="desmos" href="desmos">Desmos</a>
+            <a id="math" href="math">Mathematics</a>
         </div>
         <canvas id="background"></canvas>
     </section>
