--- a/astronomy/index.html
+++ b/astronomy/index.html
@@ -48,6 +48,7 @@ Today, I am treasurer of the UCF Astronomy Society, and a novice amateur astrono
                 <p>Our work during Comet ZTF's nearest approach</p>
             </a>
         </div>
+        <div id="footer-img"></div>
     </main>
     
 </body>
