--- a/index.html
+++ b/index.html
@@ -30,14 +30,14 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/chroma-js/2.0.3/chroma.min.js"></script>
     <script defer src="simplexNoise.js"></script>
     
-    <link rel="stylesheet" href="main.css">
+    <link rel="stylesheet" href="style.css">
     <script defer src="main.js"></script>
     
 </head>
 <body>
 
     <header class="header">
-        <a href="#" class="logo">Maverick</a>
+        <a href="#" class="logo" id="main-name">Maverick</a>
         <i id="menu-icon" class='bx bx-menu'></i>
         <nav class="navbar">
             <a href="#" class="active">Home</a>
@@ -58,7 +58,7 @@
             <a href="https://www.linkedin.com/in/maverickreyn" target="_blank"><i class="bx bxl-linkedin"></i></a>
             <a href="https://github.com/mavreyn" target="_blank"><i class="bx bxl-github"></i></a>
         </div>
-        <img src="PROF_upd_429.jpg" alt="Maverick Reynolds Profile Picture">
+        <img src="PROF_upd_429.jpg" alt="Maverick Reynolds Profile Picture" id="profile-pic">
     </section>
 
     <section class="about" id="about">
